tests/NormalTests/paczka1/small_fuzzy/60666702.err
Error in line 11: 5BAZs3 A52 99,0
Error in line 9: 5AH00awd S803 32,4
